@@ -35,7 +35,9 @@
 #include "tool-icons.h"
 
 #include <cairo.h>
+#ifdef CAIRO_HAS_SVG_SURFACE 
 #include <cairo-svg.h>
+#endif
 
 #define NUM_HANDLES 2
 /* Object definition */
@@ -259,7 +261,12 @@ outline_update_data (Outline *outline)
     cairo_path_destroy (outline->path);
   outline->path = NULL;
   /* surface will not be used to render anything, it is just to create the cairo context */
+#ifdef CAIRO_HAS_SVG_SURFACE
   surface = cairo_svg_surface_create_for_stream (write_nul, NULL, 100, 100);
+#else
+  /* if only I could remember why I have choosen the svg surface in the first place */
+  surface = cairo_image_surface_create (CAIRO_FORMAT_ARGB32, 100, 100);
+#endif
   cr = cairo_create (surface);
   cairo_surface_destroy (surface); /* in fact: unref() */
   style = dia_font_get_style (outline->font);
